--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,17 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="guardarBtn">fuck-u</string>
+    <string name="emailHint">suk-a-fart_n_dix</string>
+    <string name="emailTxt">n_dix</string>
+    <string name="telefonoHint">telefonoHint</string>
+    <string name="frutasHint">frutasHint</string>
+    <string name="frutaTxt">frutaTxt</string>
+    <string name="colorTxt">colorTxt</string>
+    <string name="telefonoTxt">telefonoTxt</string>
+
+    <array name="colorEntries">colorEntries</array>
+
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut nisi a ligula porta fringilla eget vitae tellus. Mauris at nisi sed nisi dictum commodo. Fusce mauris purus, aliquet sit amet suscipit eget, scelerisque quis quam. Proin vulputate, lectus eu molestie accumsan, nunc nunc ornare metus, eu tristique eros sem quis nunc. Nam vitae lorem mi. Nulla vitae tempor dolor. Nulla convallis nisl a mi porttitor a tempor tortor aliquet.</string>
 </resources>
